# bytomancer-aoc-2024

./: Cargo.toml  README.md  flake.nix
lua_src/: common.fnl  runner.lua
lua_src/solutions/: d01s1.fnl  d01s2.fnl  d02s1.fnl  d02s2.fnl  d03s1.fnl  d04s1.fnl
notes/: day13.md
src/: func_map.rs  main.rs
src/solutions/: d00s1lua.rs  d00s2lua.rs  d01s1.rs  d01s1lua.rs  d01s2.rs  d01s2lua.rs  d02s1.rs  d02s1lua.rs  d02s2.rs  d02s2lua.rs  d03s1.rs  d03s1lua.rs  d03s2.rs  d03s2lua.rs  d04s1.rs  d04s1lua.rs  d04s2.rs  d04s2lua.rs  d05s1.rs  d05s1lua.rs  d05s2.rs  d05s2lua.rs  d06s1.rs  d06s1vis.rs  d06s2.rs  d06s2rev.rs  d07s1.rs  d07s2.rs  d08s1.rs  d08s2.rs  d09s1.rs  d09s2.rs  d10s1.rs  d10s2.rs  d11s1.rs  d11s2.rs  d12s1.rs  d12s2.rs  d13s1.rs  d13s2.rs  (+22 more)
