[package]
name = "bytomancer-aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.34.0"
color-eyre = "0.6.2"
colored = "2.0.4"
dotenv = "0.15.0"
mlua = { version = "0.10.1", features = ["lua52", "macros", "async"] }
num = "0.4.1"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["cookies"] }
tokio = { version = "1.34", features = ["full"] }
